--- a/questions.html
+++ b/questions.html
@@ -25,6 +25,8 @@ session_start();
         <main>
             <form form action="submit_diary.php" method="post">
             <!--Questions 1 - 3 -->
+            <p>Enter your username:</p>
+            <input type="text" name="username"><br>
             <p>Enter today's date, in MM-DD-YYYY format:</p>
             <input type="text" name="date"><br>
             <section id = rating_questions_one_thru_ten>
